--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "Decorator and typescript support for the `vue-async-computed` module",
 	"main": "build/index.js",
+	"types": "types/index.d.ts",
 	"repository": "git://github.com/romancow/vue-async-computed-decorator.git",
 	"author": "Sean Wilson",
 	"license": "MIT",
