--- a/packages/@types/vue-async-computed/package.json
+++ b/packages/@types/vue-async-computed/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@types/vue-async-computed-decorator",
+	"name": "@types/vue-async-computed",
 	"version": "1.0.0",
-	"description": "TypeScript definitions for vue-async-computed-decorator",
+	"description": "TypeScript definitions for vue-async-computed",
 	"main": "",
 	"types": "index.d.ts",
 	"repository": "git://github.com/romancow/vue-async-computed-decorator.git",
