--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"vue": "~2"
 	},
 	"dependencies": {
-		"@types/vue-async-computed": "./packages/@types/vue-async-computed",
+		"@types/vue-async-computed": "@romancow/vue-async-computed",
 		"vue-async-computed": "^3.7.0",
 		"vue-class-component": "^7.1.0"
 	}
