Make the `vue-async-computed` internal package a re-export w/ types
instead of just type definitions

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"scripts": {
 		"clean": "rimraf ./index.js ./index.d.ts",
 		"build": "tsc -p .",
+		"build:defs": "tsc -p ./packages/vue-async-computed",
 		"prepare": "npm run build"
 	},
 	"devDependencies": {
