--- a/packages/vue-async-computed/tsconfig.json
+++ b/packages/vue-async-computed/tsconfig.json
@@ -1,13 +1,17 @@
 {
 	"compilerOptions": {
+		"declaration": true,
+		"experimentalDecorators": false,
+		"module": "commonjs",
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
 		"noImplicitThis": true,
 		"noUnusedLocals": true,
+		"removeComments": true,
+		"sourceMap": false,
 		"strict": true,
 		"strictNullChecks": true,
-		"target": "es5",
-		"types": ["vue"]
+		"target": "es5"
 	},
 	"include": ["**/*.ts"]
 }
