Re-export all `vue-async-computed` types

--- a/packages/vue-async-computed/package.json
+++ b/packages/vue-async-computed/package.json
@@ -14,5 +14,8 @@
 	"files": ["*.js", "*.d.ts"],
 	"dependencies": {
 		"vue-async-computed": "^3.7.0"
+	},
+	"peerDependencies": {
+		"vue": "~2"
 	}
 }
